[package]
name = "cargo-8885-requirer"
version = "0.1.0"
authors = ["Aidan Cully <github@aidan.users.panix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cargo8885]
git = "https://github.com/aidancully/cargo-8885-provider"
branch = "main"
